--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
+title: MIT 6.419x Reports
 author: The Jupyter Book Community
-logo: logo.png
+logo: logo.jpg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
