--- a/_toc.yml
+++ b/_toc.yml
@@ -2,7 +2,5 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: intro
-- file: content
   sections:
-    - file: markdown
-    - file: notebooks
+    - file: HW_Module1_username
