--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: MIT 6.419x Reports
-author: The Jupyter Book Community
+author: username
 logo: logo.jpg
 
 # Force re-execution of notebooks on each build.
