--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: MIT 6.419x Reports
-author: username
+author: Full Name
 logo: logo.jpg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: force
+  timeout: 1800
 
 # Define the name of the latex output file for PDF builds
 latex:
